--- a/css/lab6_final.css
+++ b/css/lab6_final.css
@@ -10,18 +10,26 @@ body {
 }
 
 #header {
-  position: relative;
-  margin-top: 40px;
-  border-radius: 12px 12px 0px 0px; 
+  /* code generated using https://www.colorzilla.com/gradient-editor/ */
+background: #c5deea; /* Old browsers */
+background: -moz-linear-gradient(top,  #c5deea 0%, #8abbd7 31%, #066dab 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c5deea), color-stop(31%,#8abbd7), color-stop(100%,#066dab)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #c5deea 0%,#8abbd7 31%,#066dab 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #c5deea 0%,#8abbd7 31%,#066dab 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #c5deea 0%,#8abbd7 31%,#066dab 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #c5deea 0%,#8abbd7 31%,#066dab 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c5deea', endColorstr='#066dab',GradientType=0 ); /* IE6-9 */
+position: relative;
+margin-top: 40px;
+border-radius: 12px 12px 0px 0px; 
 }
 
 #header h1 {
 	position: absolute;
 	left: 420px;
-	top:5px;
-  font-size: 3em;
+	top:20px;
+  font-size: 2em;
 	font-family: 'Devonshire', cursive;
-  color: #E35335;
 }
 
 #header a#logo1 img {
@@ -63,7 +71,7 @@ h2 strong {
   font-weight: 900;
 }
 
-.image-r {
+.imageR {
 	float: right;
 	border: 2px solid blue;
   width: 300px;
@@ -116,7 +124,15 @@ h2 strong {
   text-align: center;
 }
 
-strong {
+b {
   font-weight: 900;
   font-size: 48px;
 }
+
+
+
+
+
+
+
+
